--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "solid-hackernews-app",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "homepage": "http://ryansolid.github.io/solid-hackernews-app",
   "private": true,
   "dependencies": {
     "firebase": "^2.4.2",
-    "solid-element": "^0.6.2",
-    "solid-scripts": "0.0.20",
+    "solid-element": "0.8.0",
+    "solid-scripts": "0.0.23",
     "webcomponent-router": "0.4.3"
   },
   "scripts": {
